--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build html
-        run: ./build.sh
+        run: ./build.sh Denves
         
       - name: Check html
         run: cat ./build/index.html
